--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
@@ -1,6 +1,6 @@
 
 
-<h3>User Approval Requests</h3>
+<h1 style="text-align: center;size:large;">User Approval Requests</h1>
 <br>
 
 <table align="center" class="table">
@@ -16,6 +16,9 @@
     </th>
     <th>
         Mobile
+    </th>
+    <th>
+        Action
     </th>
     
 </tr>
