--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.html
@@ -6,6 +6,9 @@
       <!-- <img src="../assets/images/bidder.png" alt="farmers auction" style="width:100%"> -->
       
       <p><a routerLink="/bidding-auction"><button mat-raised-button >Bid Now</button></a></p>
+      <br><br><br>
+      <h2>Check the market prices and the bidding going out there!!</h2>
+      <h2>Find your best bid and place a bid!!<br>Bid Now!!</h2>
     </div>
     </div>
 <br><br><br><br><br>
