--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-farmer/login-farmer.component.html
@@ -5,14 +5,14 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold"  style="color:rgb(77, 190, 77); font-style: normal;font-weight: bold;">Hello Farmer!<br>
-                    Please Enter login details</h1>
+    
                 <div class="account-wall">
-                    <!-- ICON FOR LOGIN FORM -->
-                    <!-- <div margin=""></div>
-                    <mat-icon>person</mat-icon> -->
-                    
-                
+
+              <mat-icon style="margin-left:40%;font-size: 70px; color:green">eco</mat-icon>      
+                    <h1 class="text-center login-title text-green font-weight-normal" style="color:green">
+                        Hello Farmer!!<br>
+                        Please Enter login details
+                    </h1>   
                     <form [formGroup]="loginForm" (ngSubmit)="doLogin()" class="form-signin">
                         <!-- email address -->
                         <div class="form-group">
@@ -53,7 +53,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a class="btn btn-warning" routerLink="/home">
+                        <a class="btn btn-warning" routerLink="">
                              Home</a>
                         <br>
                      
