--- a/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.css
@@ -45,7 +45,7 @@
 }
   .screen {
     position: absolute;
-    background: #bfc7c1;
+    background: #b0d8ba;
     border-radius: 15px;
     width:50%;
     margin:auto;
