--- a/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.html
@@ -54,6 +54,6 @@
       <p>Delhi:+10478953</p>
       <p>Mumbai:+10478954</p>
       <p>UttarPradesh:+10478955</p><br>
-      <h2 style="color:rgb(27, 16, 16)">Email:farmerteam@gmail.com</h2>
+      <h2 style="color:rgb(27, 16, 16)">email: agromart@gmail.com</h2>
     </div>
   </div>
