--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.css
@@ -1,6 +1,5 @@
 .table{
-   
-    margin-left: 10%;
-    margin-right: 10%;
-  
+margin:auto;
+   border:5px solid black;
+   border-radius: 10px;
 }
