--- a/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
@@ -3,7 +3,7 @@
 <div class="bg" >
 
 
-<div class="card" style="width: 22rem; margin:0 auto;"> 
+<div class="card" style="width: 25rem; margin:auto;"> 
   <img class="card-img-top"
       src= 
 "https://media.geeksforgeeks.org/wp-content/uploads/20190506125816/avt.png"
@@ -12,11 +12,7 @@
   <div class="card-body"> 
       <h4 class="card-title" style="color:green"> 
           Welcome Admin
-      </h4> 
-        
-     
-        
-      
+      </h4>     
   </div> 
     
   <div class="card-footer text-center"> 
@@ -24,21 +20,21 @@
     <div class="btn-container">
         
       <button class="btn" (click)="UserRequests()"
-                  id="left" style="color:rgb(204, 23, 23)"> 
-          Approve Requests 
+                  id="left" style="color:rgb(58, 26, 170)"> 
+          Approve User Requests
       </button> 
         
       <button class="btn" (click)="AuctionRequests()"
-              id="center" style="color:rgb(68, 136, 37)"> 
-          Auction Requests
+              id="center" style="color:rgb(187, 32, 53)"> 
+          Sale Requests
       </button> 
         
       <button class="btn" (click)="BidRequests()"
-              id="right" style="color:rgb(105, 20, 218)"> 
+              id="right" style="color:rgb(64, 7, 139)"> 
           Bid Requests 
       </button> 
       <button class="btn" (click)="SellCrop()"
-              id="right" style="color:rgb(105, 20, 218)"> 
+              id="right" style="color:rgb(187, 32, 53)"> 
           Market Place
       </button> 
       </div>
