--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
@@ -1,13 +1,19 @@
+h2{
+  font-style: normal;
+  font-weight: bolder;
+
+}
 .card {
-  background-color: rgba(169, 164, 172, 0.712);
-    background-color: inherit;
+  background-color: rgb(243, 236, 247);
+    color:rgb(1, 14, 1);
     width:500px;
-    height: 450px;
-    margin: auto;
+    height:300px;
+    margin-top:25%;
     text-align: center;
     font-family: arial;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
   .card button {
     border-radius: 5px;
@@ -20,7 +26,7 @@
     cursor: pointer;
     width: 100%;
     font-size: 18px;
-    height:50%;
+    height:100%;
   }
   
   .card button:hover {
