--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.css
@@ -39,7 +39,7 @@
     border-top-right-radius: 0;
 }
 .account-wall
-{
+{ border-radius: 15px;
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
     background-color: #f7f7f7;
