--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.html
@@ -5,10 +5,13 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Bidder!</p>
-                    Please Enter login details
-                </h1>
+              
                 <div class="account-wall">
+                    <mat-icon style="margin-left:40%;font-size: 70px; color:green">eco</mat-icon>    
+                    <h1 class="text-center login-title text-green font-weight-normal" style="color:green">
+                        Hello Bidder!!<br>
+                        Please Enter login details
+                    </h1>   
                     <!-- ICON FOR LOGIN FORM -->
                     <!-- <div margin=""></div>
                     <mat-icon>person</mat-icon> -->
@@ -55,7 +58,7 @@
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
                         <button class="btn btn-outline-danger" type="reset"> Cancel</button>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a class="btn btn-warning" routerLink="/home">
+                        <a class="btn btn-warning" routerLink="">
                             Home</a>
                         <br/>
                         <br/>
