--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.css
@@ -40,6 +40,7 @@
 }
 .account-wall
 {
+    border-radius: 15px;
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
     background-color: #f7f7f7;
