--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidding-auction/bidding-auction.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidding-auction/bidding-auction.component.html
@@ -36,10 +36,8 @@
     <td>{{i.Crop_name}}</td>
     <td>{{i.Base_price}}</td>
     <td>{{i.Current_bid}}</td>
-    <td><a><button class="btn btn-info" (click)="onBid(i.CID)">Bid</button></a></td>
+    <td><a><button class="btn btn-info" (click)="onBid(i.CID)" style="margin:auto;width:50%;margin-left: 20%;">Bid</button></a></td>
 </tr>
-<p style="background-color: inherit;position:relative;"><a><button class="btn btn-success btn-lg" routerLink="/bidder-welcome" >Back</button></a>
-</p>
 
 </table> 
 
