--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-marketplace/farmer-marketplace.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-marketplace/farmer-marketplace.component.html
@@ -23,7 +23,7 @@
     <td>{{i.CID}}</td>
     <td>{{i.crop_name}}</td>
     <td>{{i.crop_type}}</td>
-    <td><a><button class="btn btn-success" (click)="onView(i.CID)" >View</button></a></td>
+    <td><a><button class="btn btn-success" (click)="onView(i.CID)" style="margin-left:40%;" >View</button></a></td>
 </tr>
 </table>
 </div>
