--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-bid-auction/admin-bid-auction.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-bid-auction/admin-bid-auction.component.html
@@ -1,6 +1,6 @@
 
 
-<h3>Bid Approval Requests</h3>
+<h1 style="text-align: center;font-size: large;">Bid Approval Requests</h1>
 <br>
 
 <table align="center" class="table">
@@ -20,6 +20,12 @@
     <th>
         Bid Amount
     </th>
+    <th>
+        Action1
+    </th>
+    <th>
+        Action2
+    </th>
     
     
 </tr>
@@ -35,8 +41,8 @@
     
     
     
-    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.BIID)" >Approve</button></a></td>
-    <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.BIID)" >Reject</button></a></td>
+    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.BIID)" style="font-size: medium;">Approve</button></a></td>
+    <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.BIID)" style="font-size: medium;" >Reject</button></a></td>
     
 
 </tr>
