--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-registration/bidder-registration.component.html
@@ -7,7 +7,7 @@
       <form class= "form-margin" [formGroup]="registerForm" (ngSubmit)="onNext()">
               <div class="form-group col-10">
                   <label>Full Name</label>
-                  <input type="text" formControlName="full_name" class="form-control" pattern="[A-Za-z]{2,}$" title="Name should contain atleast 2 letters" [ngClass]="{ 'is-invalid': submitted && f.full_name.errors }" />
+                  <input type="text" formControlName="full_name" class="form-control" pattern="[A-Z a-z]{2,}$" title="Name should contain atleast 2 letters" [ngClass]="{ 'is-invalid': submitted && f.full_name.errors }" />
                   <div *ngIf="submitted && f.full_name.errors" class="invalid-feedback">
                       <div *ngIf="f.full_name.errors.required">Name is required</div>
                 </div>
@@ -69,6 +69,14 @@
                     
                 </div>
               </div>
+                <div class="form-group col-7">
+                    <label>Account Number</label>
+                    <input type="text" formControlName="account_no" class="form-control"  pattern="^[0-9]{4,}$" title="Invalid Account Number" [ngClass]="{ 'is-invalid': submitted && f.account_no.errors }" />
+                    <div *ngIf="submitted && f.account_no.errors" class="invalid-feedback">
+                        <div *ngIf="f.account_no.errors.required">Please enter bank account number</div>
+                        
+                    </div>
+              </div>
                <div class="form-group col">
                   <label>IFSC Code</label>
                   <input type="text" formControlName="ifsc" class="form-control" pattern="^[A-Za-z0-9]{4,}$" title="Invalid IFSC code"[ngClass]="{ 'is-invalid': submitted && f.ifsc.errors }" />
@@ -110,5 +118,6 @@
 
       </form>
   </div>
+</div>
 </div>
 <br><br>
