--- a/gladiatorFrontend/gladiatorAngular/src/app/components/forgot-password/forgot-password.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/forgot-password/forgot-password.component.html
@@ -2,11 +2,13 @@
     <div class="container">
       <div class="screen">
         <div class="screen-header">
+      
           <div class="screen-header-left">
             <div class="screen-header-button close"></div>
             <div class="screen-header-button maximize"></div>
             <div class="screen-header-button minimize"></div>
           </div>
+      
           <div class="screen-header-right">
             <div class="screen-header-ellipsis"></div>
             <div class="screen-header-ellipsis"></div>
@@ -16,10 +18,10 @@
         <div class="screen-body">
           <div class="screen-body-item left">
             <div class="app-title">
-              <span>CONTACT</span>
-              <span>US</span>
+              <span>Please provide your<br><br> email</span><br><br><br>
+              <span>We will help you </span>
             </div>
-            <div class="app-contact">Mobile No : +91 9589979448 <br> Email : ltiteam4@gmail.com  </div>
+            
             
           </div>
           <div class="screen-body-item">
